working on windows

--- a/src/app.config.json
+++ b/src/app.config.json
@@ -1,4 +1,4 @@
 {
-  "title": "Skote is a fully featured premium Vuejs admin dashboard template built on top of awesome Bootstrap 4.4.1",
-  "description": "Skote is a fully featured premium Vuejs admin dashboard template built on top of awesome Bootstrap 4.4.1"
+  "title": "VisiPoint 5",
+  "description": "VisiPoint 5 visiting system"
 }
