--- a/.env
+++ b/.env
@@ -1,12 +1,9 @@
-VUE_APP_IS_ELECTRON=true
-VUE_APP_IS_TEST=true
-VUE_APP_NODE_ENV=development
-VUE_APP_ENABLE_FAKER=false
-
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
-
-VUE_APP_DEFAULT_AUTH=fackbackend
+VUE_APP_IS_TEST=false
+VUE_APP_NODE_ENV=production
+VUE_APP_ENABLE_FAKER=false
+VUE_APP_DEFAULT_AUTH=firebase
 
 VUE_APP_APIKEY=
 VUE_APP_AUTHDOMAIN=
