--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ VUE_APP_IS_TEST=false
 VUE_APP_NODE_ENV=production
 VUE_APP_ENABLE_FAKER=false
 VUE_APP_DEFAULT_AUTH=firebase
+GH_TOKEN=18a84b1f5a12decb8c5857560436104a93befc98
+VUE_APP_GH_TOKEN=18a84b1f5a12decb8c5857560436104a93befc98
 
 VUE_APP_APIKEY=
 VUE_APP_AUTHDOMAIN=
