--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sass": "^1.24.2",
     "sass-loader": "^8.0.0",
     "simplebar-vue": "^1.5.1",
+    "sqlite3": "^5.0.0",
     "sweetalert2": "^9.17.0",
     "v-click-outside": "^3.0.1",
     "v-mask": "^2.2.1",
@@ -84,6 +85,7 @@
     "babel-eslint": "^10.0.3",
     "electron": "^9.0.0",
     "electron-devtools-installer": "^3.1.0",
+    "electron-rebuild": "^2.3.4",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
